# prompting_paligemma2

./: .gitignore  PFM_test.ipynb  main.py  pyproject.toml
