[project]
name = "pfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "accelerator>=2025.11.11",
    "bitsandbytes>=0.49.2",
    "huggingface-hub>=1.10.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "pillow>=12.2.0",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.3",
]
